tests/ui/generic-associated-types/issue-102114.current.stderr
error[E0049]: type `B` has 1 type parameter but its trait declaration has 0 type parameters
  --> $DIR/issue-102114.rs:14:12
   |
LL |     type B<'b>;
   |            -- expected 0 type parameters
...
LL |     type B<T> = Wrapper<T>;
   |            ^ found 1 type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0049`.
